--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
-    "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-dotenv": "^3.4.11",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.1.2"
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
+
